// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`compoenents/modals/confirm-modal should render defaults 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 flex items-center justify-center z-1200"
  >
    <summary
      class="absolute inset-0 bg-black opacity-75"
      data-testid="modal__backdrop"
    />
    <div
      class="relative bg-paper z-1500 overflow-hidden shadow-lg h-full sm:rounded-none sm:rounded-xl max-w-2xl min-w-full sm:min-w-sm sm:w-auto w-sm md:w-md sm:h-fit"
      data-testid="modal"
    >
      <div
        class="flex justify-between items-center p-3"
      >
        <div>
          <p
            class="text-2xl font-bold text-text-primary"
          >
            Confirmation
          </p>
        </div>
        <button
          class="flex items-center text-sm p-1 rounded cursor-pointer h-fit text-text-tertiary hover:bg-text-tertiary/10"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-x size-6"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 6 6 18"
            />
            <path
              d="m6 6 12 12"
            />
          </svg>
        </button>
      </div>
      <div
        class="overflow-y-auto p-3 h-full md:h-unset"
        style="max-height: calc(100vh - 0px); height: auto;"
      >
        <span
          class="my-8 font-bold italic"
        >
          Are you sure you want to proceed?
        </span>
        <div
          class="flex justify-end mt-4 gap-2"
        >
          <button
            class="border border-secondary py-2 px-4 hover:border-tertiary hover:text-tertiary rounded-xl text-lg text-secondary uppercase text-center font-bold cursor-pointer flex items-center justify-center gap-2"
          >
            Cancel
          </button>
          <button
            class="bg-primary py-2 px-4 hover:bg-primary/85 hover:text-text-primary rounded-xl text-lg text-tertiary uppercase text-center font-bold cursor-pointer flex items-center justify-center gap-2"
          >
            Confirm
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`compoenents/modals/confirm-modal should render with passed props 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 flex items-center justify-center z-1200"
  >
    <summary
      class="absolute inset-0 bg-black opacity-75"
      data-testid="modal__backdrop"
    />
    <div
      class="relative bg-paper z-1500 overflow-hidden shadow-lg h-full sm:rounded-none sm:rounded-xl max-w-2xl min-w-full sm:min-w-sm sm:w-auto w-sm md:w-md sm:h-fit"
      data-testid="modal"
    >
      <div
        class="flex justify-between items-center p-3"
      >
        <div>
          <p
            class="text-2xl font-bold text-text-primary"
          >
            Test title
          </p>
        </div>
        <button
          class="flex items-center text-sm p-1 rounded cursor-pointer h-fit text-text-tertiary hover:bg-text-tertiary/10"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-x size-6"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 6 6 18"
            />
            <path
              d="m6 6 12 12"
            />
          </svg>
        </button>
      </div>
      <div
        class="overflow-y-auto p-3 h-full md:h-unset"
        style="max-height: calc(100vh - 0px); height: auto;"
      >
        <span
          class="my-8 font-bold italic"
        >
          Test message
        </span>
        <div
          class="flex justify-end mt-4 gap-2"
        >
          <button
            class="border border-secondary py-2 px-4 hover:border-tertiary hover:text-tertiary rounded-xl text-lg text-secondary uppercase text-center font-bold cursor-pointer flex items-center justify-center gap-2"
          >
            Cancel
          </button>
          <button
            class="bg-primary py-2 px-4 hover:bg-primary/85 hover:text-text-primary rounded-xl text-lg text-tertiary uppercase text-center font-bold cursor-pointer flex items-center justify-center gap-2"
          >
            Confirm
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
